# pyrun

./: .gitignore  README.md  deploy.sh  pyproject.toml  run-tests.sh
docs/specs/: command-execution.md
pyrun/: __init__.py  jsonl.py  mcp.py  runtime.py
tests/: test_jsonl.py  test_mcp.py  test_runtime.py
